@@ -1,227 +1,157 @@
-buildscript {
-    repositories {
-        google()
-        jcenter()
-    }
-    dependencies {
-        classpath "com.android.tools.build:gradle:$androidToolsBuildGradle"
-        classpath "org.kt3k.gradle.plugin:coveralls-gradle-plugin:$coverallsVersion"
-    }
+plugins {
+  id 'com.android.library'
+  id 'jacoco'
 }
 
-apply plugin: 'com.android.library'
-apply plugin: 'jacoco'
-apply plugin: 'com.github.kt3k.coveralls'
-
 jacoco {
-    toolVersion = jacocoVersion
+  toolVersion = '0.8.10'
 }
 
 android {
-    compileSdkVersion androidCompileSdkVersion
-    buildToolsVersion androidBuildToolsVersion
+  namespace 'org.smartregister.pnc'
+  compileSdk 35
+  buildToolsVersion '35.0.0'
 
-    defaultConfig {
-        minSdkVersion androidMinSdkVersion
-        targetSdkVersion androidTargetSdkVersion
-        versionCode 1
-        versionName "1.0"
-        multiDexEnabled true
-        buildConfigField "String[]", "LOCATION_LEVELS", '{"Country", "Province", "District", "Facility", "Village"}'
-        buildConfigField "String[]", "HEALTH_FACILITY_LEVELS", '{"Country", "Province", "District", "Health Facility", "Village"}'
-        buildConfigField "String[]", "ALLOWED_LEVELS", '{"Health Facility"}'
-        buildConfigField "String", "DEFAULT_LEVEL", '"Health Facility"'
-        testInstrumentationRunner 'androidx.test.runner.AndroidJUnitRunner'
-        //consumerProguardFiles 'consumer-rules.pro'
-        javaCompileOptions {
-            annotationProcessorOptions {
-                includeCompileClasspath = true
-            }
-        }
+  defaultConfig {
+    minSdk 28
+    targetSdk 35
+    versionCode (project.findProperty('VERSION_CODE')?.toString()?.toInteger() ?: 1)
+    versionName project.findProperty('VERSION_NAME')?.toString() ?: '0.0.1-SNAPSHOT'
+    multiDexEnabled true
+    testInstrumentationRunner 'androidx.test.runner.AndroidJUnitRunner'
+    buildConfigField 'String[]', 'LOCATION_LEVELS', '{"Country", "Province", "District", "Facility", "Village"}'
+    buildConfigField 'String[]', 'HEALTH_FACILITY_LEVELS', '{"Country", "Province", "District", "Health Facility", "Village"}'
+    buildConfigField 'String[]', 'ALLOWED_LEVELS', '{"Health Facility"}'
+    buildConfigField 'String', 'DEFAULT_LEVEL', '"Health Facility"'
+  }
+
+  buildFeatures {
+    buildConfig true
+  }
+
+  buildTypes {
+    debug {
+      enableUnitTestCoverage true
+      enableAndroidTestCoverage true
     }
-
-    buildTypes {
-        release {
-            minifyEnabled false
-            proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
-            testCoverageEnabled = true
-            zipAlignEnabled true
-        }
-
-        debug {
-            testCoverageEnabled true
-        }
+    release {
+      minifyEnabled false
+      enableUnitTestCoverage true
+      enableAndroidTestCoverage true
+      proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
     }
+  }
 
-    testOptions {
-        unitTests {
-            returnDefaultValues = true
-            includeAndroidResources = true
-        }
+  lint {
+    abortOnError false
+  }
+
+  packaging {
+    resources {
+      excludes += [
+        'LICENSE.txt',
+        'META-INF/LICENSE',
+        'META-INF/LICENSE.txt',
+        'META-INF/license.txt',
+        'META-INF/NOTICE.txt',
+        'META-INF/notice.txt',
+        'META-INF/DEPENDENCIES',
+        'META-INF/ASL2.0',
+        'META-INF/INDEX.LIST'
+      ]
     }
+  }
 
-    lintOptions.abortOnError false
+  compileOptions {
+    sourceCompatibility JavaVersion.VERSION_1_8
+    targetCompatibility JavaVersion.VERSION_1_8
+    coreLibraryDesugaringEnabled true
+  }
 
-    compileOptions {
-        coreLibraryDesugaringEnabled true
-        sourceCompatibility JavaVersion.VERSION_1_8
-        targetCompatibility JavaVersion.VERSION_1_8
+  testOptions {
+    unitTests {
+      returnDefaultValues = true
+      includeAndroidResources = true
+      all {
+        jvmArgs(
+          '-Xmx1024m',
+          '--add-opens=java.base/java.lang=ALL-UNNAMED',
+          '--add-opens=java.base/java.lang.reflect=ALL-UNNAMED',
+          '--add-opens=java.base/java.io=ALL-UNNAMED',
+          '--add-opens=java.base/java.net=ALL-UNNAMED',
+          '--add-opens=java.base/java.util=ALL-UNNAMED',
+          '--add-opens=java.base/java.text=ALL-UNNAMED',
+          '--add-opens=java.base/java.security=ALL-UNNAMED',
+          '--add-opens=java.base/jdk.internal.reflect=ALL-UNNAMED',
+          '--add-opens=java.base/jdk.internal.misc=ALL-UNNAMED',
+          '--add-opens=java.base/jdk.internal.util=ALL-UNNAMED',
+          '--add-opens=java.base/sun.nio.ch=ALL-UNNAMED',
+          '--add-opens=java.base/sun.security.util=ALL-UNNAMED',
+          '--add-opens=java.desktop/java.awt.font=ALL-UNNAMED',
+          '--add-exports=java.base/jdk.internal.reflect=ALL-UNNAMED'
+        )
+        systemProperty 'robolectric.dependency.repo.url', 'https://repo1.maven.org/maven2'
+        systemProperty 'robolectric.enabledSdks', '28'
+      }
     }
-
-    packagingOptions {
-        exclude 'META-INF/LICENSE.md'
-        exclude 'META-INF/NOTICE.md'
-        exclude 'META-INF/DEPENDENCIES'
-    }
+  }
 }
 
-tasks.withType(Test) {
-    jacoco.includeNoLocationClasses = true
+tasks.withType(Test).configureEach {
+  jacoco {
+    includeNoLocationClasses = true
+    excludes = ['jdk.internal.*']
+  }
 }
 
 dependencies {
-    coreLibraryDesugaring 'com.android.tools:desugar_jdk_libs:1.0.9'
+  coreLibraryDesugaring 'com.android.tools:desugar_jdk_libs:2.0.4'
 
-    implementation fileTree(dir: 'libs', include: ['*.jar'])
+  api('io.github.bluecodesystems:opensrp-client-core:6.2.2') { transitive = true }
+  api('io.github.bluecodesystems:opensrp-client-native-form-new:3.1.3') { transitive = true }
+  api('com.github.BlueCodeSystems:opensrp-client-configurable-views:v2.0.1') { transitive = true }
 
-    api 'androidx.appcompat:appcompat:1.0.0'
-    androidTestImplementation 'androidx.test.ext:junit:1.1.1'
-    implementation 'androidx.multidex:multidex:2.0.0'
+  implementation 'androidx.appcompat:appcompat:1.6.1'
+  implementation 'androidx.recyclerview:recyclerview:1.3.2'
+  implementation 'androidx.cardview:cardview:1.0.0'
+  implementation 'androidx.constraintlayout:constraintlayout:2.1.4'
+  implementation 'com.google.android.material:material:1.12.0'
+  implementation 'org.apache.commons:commons-lang3:3.12.0'
+  implementation 'org.apache.commons:commons-text:1.10.0'
+  implementation 'com.google.guava:guava:33.2.1-android'
+  implementation 'com.google.code.gson:gson:2.10.1'
+  implementation 'id.zelory:compressor:3.0.1'
+  implementation 'org.jeasy:easy-rules-core:4.1.0'
+  implementation 'org.jeasy:easy-rules-mvel:4.1.0'
+  implementation 'net.zetetic:android-database-sqlcipher:4.5.4'
 
-    api('org.smartregister:opensrp-client-core:4.2.9-SNAPSHOT@aar') {
-        transitive = true
-        exclude group: 'com.github.bmelnychuk', module: 'atv'
-        exclude group: 'com.google.guava', module: 'guava'
-        exclude group: 'com.android.support', module: 'appcompat-v7'
-        exclude group: 'net.zetetic', module: 'android-database-sqlcipher'
-        exclude group: 'com.android.support', module: 'recyclerview-v7'
-        exclude group: 'com.android.support', module: 'support-media-compat'
-        exclude group: 'com.android.support', module: 'cardview-v7'
-        exclude group: 'com.android.support', module: 'support-v4'
-        exclude group: 'com.android.support', module: 'design'
-        exclude group: 'com.ibm.fhir', module: 'fhir-model'
-    }
+  testImplementation 'junit:junit:4.13.2'
+  testImplementation 'org.mockito:mockito-core:5.11.0'
+  testImplementation 'org.mockito:mockito-inline:5.2.0'
+  testImplementation 'org.robolectric:robolectric:4.10.3'
+  testImplementation 'androidx.test:core:1.5.0'
+  testImplementation 'androidx.test.ext:junit:1.1.5'
+  testImplementation 'androidx.sqlite:sqlite:2.3.1'
 
-    api('org.smartregister:opensrp-client-configurable-views:1.1.5-SNAPSHOT@aar') {
-        transitive = true
-        exclude group: 'org.smartregister', module: 'opensrp-client-core'
-        exclude group: 'com.android.support', module: 'appcompat-v7'
-        exclude group: 'com.android.support', module: 'recyclerview-v7'
-        exclude group: 'com.android.support', module: 'support-media-compat'
-        exclude group: 'com.android.support', module: 'cardview-v7'
-        exclude group: 'com.android.support', module: 'support-v4'
-
-    }
-
-    api('org.smartregister:opensrp-client-native-form:2.0.5-SNAPSHOT@aar') {
-        transitive = true
-        exclude group: 'com.android.support', module: 'recyclerview-v7'
-        exclude group: 'com.android.support', module: 'appcompat-v7'
-        exclude group: 'com.android.support', module: 'cardview-v7'
-        exclude group: 'com.android.support', module: 'support-media-compat'
-        exclude group: 'com.android.support', module: 'support-v4'
-        exclude group: 'com.android.support', module: 'design'
-        exclude group: 'org.yaml', module: 'snakeyaml'
-        exclude group: 'io.ona.rdt-capture', module: 'lib'
-    }
-
-    annotationProcessor 'com.jakewharton:butterknife:7.0.0'
-    api 'net.zetetic:android-database-sqlcipher:4.1.3@aar'
-    implementation 'commons-validator:commons-validator:1.6'
-    implementation 'com.google.code.gson:gson:2.8.6'
-    implementation 'org.greenrobot:eventbus:3.1.1'
-    annotationProcessor 'org.greenrobot:eventbus-annotation-processor:3.1.1'
-    implementation 'com.google.guava:guava:20.0'
-    implementation 'io.reactivex.rxjava2:rxandroid:2.0.1'
-    // Because RxAndroid releases are few and far between, it is recommended you also
-    // explicitly depend on RxJava's latest version for bug fixes and new features.
-    implementation 'io.reactivex.rxjava2:rxjava:2.1.5'
-    implementation 'com.evernote:android-job:1.2.6'
-    implementation 'com.github.lecho:hellocharts-android:v1.5.8'
-    implementation 'id.zelory:compressor:2.1.0'
-    implementation('com.google.android.material:material:1.0.0') {
-        exclude group: 'com.android.support', module: 'recyclerview-v7'
-        exclude group: 'com.android.support', module: 'cardview-v7'
-    }
-
-    implementation 'androidx.recyclerview:recyclerview:1.0.0'
-    implementation 'androidx.cardview:cardview:1.0.0'
-    implementation 'com.crashlytics.sdk.android:crashlytics:2.10.1'
-    implementation 'androidx.constraintlayout:constraintlayout:1.1.3'
-    implementation group: 'org.yaml', name: 'snakeyaml', version: '1.24'
-    implementation 'de.hdodenhof:circleimageview:3.0.1'
-    implementation 'org.jeasy:easy-rules-core:3.2.0'
-    implementation 'org.jeasy:easy-rules-mvel:3.2.0'
-    implementation group: 'org.yaml', name: 'snakeyaml', version: '1.24'
-    implementation('com.crashlytics.sdk.android:crashlytics:2.10.1@aar') {
-        transitive = true
-    }
-
-    implementation group: 'io.fabric.sdk.android', name: 'fabric', version: '1.4.8'
-
-    def robolectricVersion = '4.1'
-    testImplementation("org.robolectric:robolectric:$robolectricVersion") {
-        exclude group: 'com.google.auto.service', module: 'auto-service'
-        exclude group: 'com.android.support'
-    }
-    testImplementation "org.robolectric:shadows-multidex:$robolectricVersion"
-    testImplementation "org.robolectric:shadows-support-v4:3.3.2"
-    testImplementation 'com.ibm.fhir:fhir-model:4.2.3'
-
-    // PowerMock
-    def powerMockVersion = '2.0.7'
-    testImplementation "org.powermock:powermock-module-junit4:$powerMockVersion"
-    testImplementation "org.powermock:powermock-module-junit4-rule:$powerMockVersion"
-    testImplementation "org.powermock:powermock-module-javaagent:$powerMockVersion"
-    testImplementation "org.powermock:powermock-api-mockito2:$powerMockVersion"
-    testImplementation "org.powermock:powermock-classloading-xstream:$powerMockVersion"
-    testImplementation 'org.apache.maven:maven-ant-tasks:2.1.3'
-    testImplementation 'org.skyscreamer:jsonassert:1.5.0'
-
-    androidTestImplementation 'androidx.test.ext:junit:1.1.1'
-
-    androidTestImplementation('androidx.test.espresso:espresso-core:3.1.0') {
-        exclude group: 'com.android.support', module: 'support-annotations'
-        exclude group: 'junit', module: 'junit'
-    }
+  androidTestImplementation 'androidx.test.ext:junit:1.1.5'
+  androidTestImplementation 'androidx.test.espresso:espresso-core:3.5.1'
+  androidTestImplementation 'androidx.test:rules:1.5.0'
 }
 
-task jacocoTestReport(type: JacocoReport, dependsOn: ['testDebugUnitTest', 'createDebugCoverageReport']) {
-
-    reports {
-        xml.enabled = true
-        html.enabled = true
-    }
-
-    getReports().getXml().setDestination(file("${buildDir}/reports/jacoco/jacocoRootReport/merged.xml"))
-    getReports().getHtml().setDestination(file("${buildDir}/reports/jacoco/jacocoRootReport/html"))
-
-    def fileFilter = ['**/R.class', '**/R$*.class', '**/BuildConfig.*', '**/Manifest*.*', '**/*Test*.*', 'android/**/*.*', '**/*$ViewBinder*.*']
-    def debugTree = fileTree(dir: "$project.buildDir/intermediates/javac/debug/classes", excludes: fileFilter)
-    def mainSrc = "$project.projectDir/src/main/java"
-
-    sourceDirectories.setFrom(files([mainSrc]))
-    classDirectories.setFrom(([debugTree]))
-    executionData.setFrom(fileTree(dir: project.buildDir, includes: [
-            'jacoco/testDebugUnitTest.exec', 'outputs/code-coverage/connected/*coverage.ec'
-    ]))
-}
-
-coveralls {
-    jacocoReportPath = "${buildDir}/reports/jacoco/jacocoRootReport/merged.xml"
-    sourceDirs = ["$project.projectDir/src/main/java"]
-}
-
-task javadoc(type: Javadoc) {
-    failOnError false
-    def mainSrc = "$project.projectDir/src/main/java"
-    source = files([mainSrc])
-    classpath += project.files(android.getBootClasspath().join(File.pathSeparator))
-    classpath += configurations.compile
-}
-
-coveralls {
-    jacocoReportPath = "${buildDir}/reports/jacoco/jacocoRootReport/merged.xml"
+tasks.register('jacocoTestReport', JacocoReport) {
+  dependsOn 'testDebugUnitTest'
+  reports {
+    xml.required = true
+    html.required = true
+    xml.outputLocation = file("${buildDir}/reports/jacoco/jacocoRootReport/merged.xml")
+    html.outputLocation = file("${buildDir}/reports/jacoco/jacocoRootReport/html")
+  }
+  def fileFilter = ['**/R.class', '**/R$*.class', '**/BuildConfig.*', '**/Manifest*.*', '**/*Test*.*', 'android/**/*.*', '**/*$ViewBinder*.*']
+  def debugTree = fileTree(dir: "$buildDir/intermediates/javac/debug/classes", excludes: fileFilter)
+  def mainSrc = "$project.projectDir/src/main/java"
+  sourceDirectories.setFrom(files(mainSrc))
+  classDirectories.setFrom(files(debugTree))
+  executionData.setFrom(fileTree(dir: buildDir, includes: ['jacoco/testDebugUnitTest.exec', 'outputs/code-coverage/connected/*coverage.ec']))
 }
 
 apply from: '../maven.gradle'
